# WebFrame

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  install_dependencies.bat  settings.ini  setup.iss  vcpkg-configuration.json  vcpkg.json
src/: main.cpp  main.hpp
src/utils/: Log.cpp  Log.hpp  keybind_listener.cpp  keybind_listener.hpp  string_utils.cpp  string_utils.hpp  utils.cpp  utils.hpp  wndctrl.hpp
src/webview/: webview.cpp  webview.hpp
src/widgets/: input_text.cpp  omnibar.cpp  screenshot.cpp  settings.cpp  widgets.hpp
src/window/: window.cpp  window.hpp
vcpkg-ports/webview2/: portfile.cmake  vcpkg.json
